Estilizando a página inicial e a de cadastro

--- a/authenticated.html
+++ b/authenticated.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <title>Exercício Formulário</title>
         <link rel="stylesheet" href='./css/reset.css' />
-        <link rel="stylesheet" href='./css/global.css' />
+        <link rel="stylesheet" href='./css/main.css' />
     </head>
     <body>
         <h1>Cadastro realizado com sucesso</h1>
