--- a/images.html
+++ b/images.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <title>Imagens</title>
         <link rel="stylesheet" href='./css/reset.css' />
-        <link rel="stylesheet" href='./css/global.css' />
+        <link rel="stylesheet" href='./css/main.css' />
     </head>
     <body>
         <h1>Página de imagens</h1>
