--- a/authenticated.html
+++ b/authenticated.html
@@ -1,12 +1,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Exercício Formulário</title>
+        <title>Cadastrado</title>
         <link rel="stylesheet" href='./css/reset.css' />
         <link rel="stylesheet" href='./css/main.css' />
+        <link rel="stylesheet" href='./css/authenticated.css' />
     </head>
     <body>
-        <h1>Cadastro realizado com sucesso</h1>
+      <div class="content-container">
+        <h1 class="form-title fade-in">Cadastro realizado com sucesso :)</h1>
+        <a class="navigation-button fade-in-delay" onclick="navigate('index')"><span>Voltar</span></a>
+      </div>
     </body>
     <script src='./js/main.js'></script>
 </html>
