--- a/images.html
+++ b/images.html
@@ -1,12 +1,45 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Imagens</title>
-        <link rel="stylesheet" href='./css/reset.css' />
-        <link rel="stylesheet" href='./css/main.css' />
-    </head>
-    <body>
-        <h1>Página de imagens</h1>
-    </body>
-    <script src='./js/main.js'></script>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Imagens</title>
+    <link rel="stylesheet" href='./css/reset.css' />
+    <link rel="stylesheet" href='./css/main.css' />
+    <link rel="stylesheet" href='./css/images.css' />
+</head>
+
+<body>
+    <div class="modal">
+        <div class="modal_contents">
+            <img src="img/01.jpg" id="modal_img">
+        </div>
+        <span id="bt_close">&times;</span>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="card_img">
+                <img src="img/01.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="img/02.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="img/03.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="img/04.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="img/05.jpg" class="small_img">
+            </div>
+            <div class="card_img">
+                <img src="img/06.jpg" class="small_img">
+            </div>
+        </div>
+    </div>
+</body>
+<script src='./js/main.js'></script>
+<script src='./js/images.js'></script>
+
 </html>
