Adicionando botão de voltar e ajustando design

--- a/videos.html
+++ b/videos.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
+  <div>
+    <a class="return-button fade-in" onclick="navigate('index')"><span>ᐊ</span></a>
+  </div>
     <div class="Blocos">
-        <h1>Galeria de videos</h1>
-        <div class="row">
+        <h1 class="fade-in">Galeria de videos</h1>
+        <div class="row fade-in">
             <div class="col">
                 <div class="feature-img">
                     <img src="videos/pic1.png" width="100%">
