--- a/images.html
+++ b/images.html
@@ -17,23 +17,24 @@
     </div>
 
     <div class="container">
+        <a class="return-button fade-in" onclick="navigate('index')"><span>ᐊ</span></a>
         <div class="row">
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/01.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/02.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/03.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/04.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/05.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/06.jpg" class="small_img">
             </div>
         </div>
