Apagando os vídeos do histórico

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Imagens</title>
+        <title>Página inicial</title>
         <link rel="stylesheet" href='./css/reset.css' />
         <link rel="stylesheet" href='./css/main.css' />
         <link rel="stylesheet" href='./css/authenticated.css' />
@@ -11,7 +11,7 @@
           <div class='header fade-in'>
               <h2>Seja</h2>
               <h1 class='page-title'>Bem-Vindo!</h1>
-              <h2>O que você deseja acessar?</h2>
+              <h2>Para onde deseja viajar?</h2>
           </div>
           <div>
             <a class="navigation-button fade-in-delay" onclick="navigate('images')"><span>Imagens</span></a>
