--- a/signIn.html
+++ b/signIn.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href='./css/authenticated.css' />
     </head>
     <body>
-        <form class='content-container'>
-            <h1 class='form-title fade-in'>Formulário de cadastro</h1>
+        <form autocomplete="off" class='content-container'>
+            <h1 class='subpage-title fade-in'>Formulário de cadastro</h1>
             <div class='data-row fade-in'>
                 <label for='name'>Nome:</label>
                 <input placeholder="Escreva o seu nome" id='name' type='text' />
@@ -39,5 +39,7 @@
         </form>
     </body>
     <script src='./js/main.js'></script>
+    <script src='https://code.jquery.com/jquery-3.6.0.js'></script>
+    <script src='./js/jquery.md5.js'></script>
     <script src='./js/cadastro.js'></script>
 </html>
