--- a/images.html
+++ b/images.html
@@ -15,25 +15,26 @@
         </div>
         <span id="bt_close">&times;</span>
     </div>
-
-    <div class="container">
+    <a class="return-button fade-in" onclick="navigate('index')"><span>ᐊ</span></a>
+    <div class="main-container">
+        <h1 class="subpage-title fade-in">Galeria de vídeos</h1>
         <div class="row">
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/01.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/02.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/03.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/04.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/05.jpg" class="small_img">
             </div>
-            <div class="card_img">
+            <div class="card_img fade-in">
                 <img src="img/06.jpg" class="small_img">
             </div>
         </div>
