--- a/images.html
+++ b/images.html
@@ -20,22 +20,22 @@
         <h1 class="subpage-title fade-in">Galeria de vídeos</h1>
         <div class="row">
             <div class="card_img fade-in">
-                <img src="img/01.jpg" class="small_img">
+                <img src="img/ale.jpg" class="small_img">
             </div>
             <div class="card_img fade-in">
-                <img src="img/02.jpg" class="small_img">
+                <img src="img/fra.jpg" class="small_img">
             </div>
             <div class="card_img fade-in">
-                <img src="img/03.jpg" class="small_img">
+                <img src="img/jpn.jpg" class="small_img">
             </div>
             <div class="card_img fade-in">
-                <img src="img/04.jpg" class="small_img">
+                <img src="img/bra.jpg" class="small_img">
             </div>
             <div class="card_img fade-in">
-                <img src="img/05.jpg" class="small_img">
+                <img src="img/ast.jpg" class="small_img">
             </div>
             <div class="card_img fade-in">
-                <img src="img/06.jpg" class="small_img">
+                <img src="img/afr.jpg" class="small_img">
             </div>
         </div>
     </div>
